Fix and document recently introduced configuration options. * configure.ac (--disable-features): Rename to --without-all. (OPTION_DEFAULT_ON): Change to use with_features. * INSTALL: Fix description. * etc/NEWS: Mention --without-all and --enable-link-time-optimization.

--- a/configure.ac
+++ b/configure.ac
@@ -48,13 +48,13 @@ archlibdir='${libexecdir}/emacs/${version}/${configuration}'
 docdir='${datadir}/emacs/${version}/etc'
 gamedir='${localstatedir}/games/emacs'
 
-dnl Do not omit a lot of the nice features by default.
-AC_ARG_ENABLE(features,
-[AS_HELP_STRING([--disable-features],
+dnl Special option to disable the most of other options.
+AC_ARG_WITH(all,
+[AS_HELP_STRING([--without-all],
 		[omit almost all features and build
 		small executable with minimal dependencies])],
-  enable_features=$enableval,
-  enable_features=yes)
+  with_features=$withval,
+  with_features=yes)
 
 dnl OPTION_DEFAULT_OFF(NAME, HELP-STRING)
 dnl Create a new --with option that defaults to being disabled.
@@ -80,7 +80,7 @@ dnl   non-alphanumeric characters with "_".
 dnl HELP-STRING is the help text for the option.
 AC_DEFUN([OPTION_DEFAULT_ON], [dnl
   AC_ARG_WITH([$1],[AS_HELP_STRING([--without-$1],[$2])],[],[dnl
-   m4_bpatsubst([with_$1], [[^0-9a-z]], [_])=$enable_features])dnl
+   m4_bpatsubst([with_$1], [[^0-9a-z]], [_])=$with_features])dnl
 ])dnl
 
 OPTION_DEFAULT_ON([pop],[don't support POP mail retrieval with movemail])
