src/makefile.w32-in ($(BLD)/vm-limit.$(O)): Update dependencies.

--- a/src/makefile.w32-in
+++ b/src/makefile.w32-in
@@ -1448,6 +1448,7 @@ $(BLD)/unexw32.$(O) : \
 $(BLD)/vm-limit.$(O) : \
 	$(SRC)/vm-limit.c \
 	$(SRC)/mem-limits.h \
+	$(NT_INC)/unistd.h \
 	$(CONFIG_H) \
 	$(LISP_H)
 
