--- a/Makefile.in
+++ b/Makefile.in
@@ -246,6 +246,7 @@ INSTALL_INFO = @INSTALL_INFO@
 # By default, we uphold the dignity of our programs.
 INSTALL_STRIP =
 MKDIR_P = @MKDIR_P@
+LN_S = @LN_S@
 
 # We use gzip to compress installed .el files.
 GZIP_PROG = @GZIP_PROG@
@@ -437,7 +438,7 @@ install-arch-dep: install-arch-indep install-doc
 	  ${INSTALL_PROGRAM} $(INSTALL_STRIP) src/emacs${EXEEXT} $(DESTDIR)${bindir}/$(EMACSFULL) || exit 1 ; \
 	  chmod 1755 $(DESTDIR)${bindir}/$(EMACSFULL) ; \
 	  rm -f $(DESTDIR)${bindir}/$(EMACS) ; \
-	  ln $(DESTDIR)${bindir}/$(EMACSFULL) $(DESTDIR)${bindir}/$(EMACS) || true ; \
+	  cd $(DESTDIR)${bindir} && $(LN_S) $(EMACSFULL) $(EMACS); \
 	else \
 	  subdir=${ns_appresdir}/site-lisp; \
 	  ${write_subdir} || exit 1; \
