--- a/Makefile.in
+++ b/Makefile.in
@@ -437,8 +437,10 @@ install-arch-dep: install-arch-indep install-doc
 	if test "${ns_self_contained}" = "no"; then \
 	  ${INSTALL_PROGRAM} $(INSTALL_STRIP) src/emacs${EXEEXT} $(DESTDIR)${bindir}/$(EMACSFULL) || exit 1 ; \
 	  chmod 1755 $(DESTDIR)${bindir}/$(EMACSFULL) ; \
-	  rm -f $(DESTDIR)${bindir}/$(EMACS) ; \
-	  cd $(DESTDIR)${bindir} && $(LN_S) $(EMACSFULL) $(EMACS); \
+	  if test "x${NO_BIN_LINK}" = x; then \
+	    rm -f $(DESTDIR)${bindir}/$(EMACS) ; \
+	    cd $(DESTDIR)${bindir} && $(LN_S) $(EMACSFULL) $(EMACS); \
+	  fi; \
 	else \
 	  subdir=${ns_appresdir}/site-lisp; \
 	  ${write_subdir} || exit 1; \
