MS-Windows adaptations for revisions 109765 and 109766.
 lib/makefile.w32-in ($(BLD)/execinfo.$(O), execinfo.h): New targets.
 (GNULIBOBJS): Add $(BLD)/execinfo.$(O).
 src/makefile.w32-in ($(BLD)/alloc.$(O)): Depend on $(GNU_LIB)/execinfo.h.

--- a/lib/makefile.w32-in
+++ b/lib/makefile.w32-in
@@ -28,6 +28,7 @@ GNULIBOBJS = $(BLD)/c-ctype.$(O) \
 	     $(BLD)/c-strncasecmp.$(O) \
 	     $(BLD)/dtoastr.$(O) \
 	     $(BLD)/dtotimespec.$(O)  \
+	     $(BLD)/execinfo.$(O)  \
 	     $(BLD)/getopt.$(O)  \
 	     $(BLD)/getopt1.$(O) \
 	     $(BLD)/gettime.$(O) \
@@ -128,6 +129,9 @@ $(BLD)/dtotimespec.$(O) : \
 	$(GNU_LIB)/intprops.h \
 	$(GNU_LIB)/timespec.h \
 	$(CONFIG_H)
+
+$(BLD)/execinfo.$(O) : \
+	$(GNU_LIB)/execinfo.h
 
 $(BLD)/getopt.$(O) : \
 	$(GNU_LIB)/getopt.c \
@@ -299,3 +303,7 @@ getopt_h:
 	      < getopt.in.h > getopt_.h-t
 	$(CP) getopt_.h-t getopt_.h
 	- $(DEL) getopt_.h-t
+
+execinfo.h: execinfo.in.h
+	$(CP) execinfo.in.h $@
+
